[tool.poetry]
name = "aiopusher"
version = "0.1.0"
description = "An async client for Pusher. Currently in development. Is unusable at the moment."
authors = ["Christian <contact@komodo.link>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Cikmo/aiopusher"
repository = "https://github.com/Cikmo/aiopusher"
packages = [{ include = "aiopusher", from = "src" }]


[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = ">=4.6.3"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
black = "^23.3.0"
pylint = "^2.17.4"
pyright = "^1.1.313"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
include = ["./src", "./tests"]
typeCheckingMode = "strict"
pythonVersion = "3.8"
